--- a/src/css/hundir_la_flota.css
+++ b/src/css/hundir_la_flota.css
@@ -4,7 +4,12 @@
 
 html {
     font-size:   16px;
-    font-family: "Press Start 2P", serif;
+    font-family: "Press Start 2P", monospace;
+}
+
+body {
+    background-image: url("../../assets/img/index/fondo_inicio.gif");
+    background-size: 0.3rem;
 }
 
 .container {
@@ -122,10 +127,18 @@ h1 {
     background-color: darkblue;
 }
 
-.ship {
-    background-color: grey;
+.barco {
+    background-color: dimgrey;
 }
 
-.hit {
+.tocado {
+    background-color: orange;
+}
+
+.hundido {
     background-color: red;
+}
+
+.agua {
+    background-color: transparent;
 }
