--- a/src/css/header_footer.css
+++ b/src/css/header_footer.css
@@ -9,10 +9,11 @@ body {
     height:           100%;
     display:          flex;
     flex-direction:   column;
+    padding-bottom:   4rem;
 }
 
 .header {
-    margin-bottom: 3.5rem;
+    margin-bottom: 3rem;
 }
 
 #reproductor {
@@ -88,7 +89,7 @@ body {
 }
 
 footer {
-    width:            100%;
+    width:            100vw;
     height:           4rem;
     background-color: #000;
     color:            white;
@@ -100,10 +101,6 @@ footer {
     position:         fixed;
     bottom:           0;
     left:             0;
-}
-
-body:nth-last-child(1) {
-    margin-bottom: 4.5rem;
 }
 
 p {
