--- a/src/css/cuatro_en_raya.css
+++ b/src/css/cuatro_en_raya.css
@@ -30,7 +30,6 @@ h1 {
     justify-content: center;
     align-items:     center;
     width:           100%;
-
 }
 
 .botones-seleccion {
@@ -49,6 +48,109 @@ h1 {
     outline:     none;
     background:  #999;
     text-shadow: 0.2rem 0.2rem 0.1rem rgba(0, 0, 0, 1);
+}
+
+/** MODAL DE INICIO / BIENVENIDA **/
+.modal-inicio {
+    display:          block;
+    position:         fixed;
+    top:              50%;
+    left:             50%;
+    transform:        translate(-50%, -50%);
+    width:            max-content;
+    z-index:          11;
+    border:           0.3rem solid #fff;
+    background-color: #000;
+    padding:          1rem;
+    box-shadow:       0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
+}
+
+.fondo-modal-inicio {
+    position:         fixed;
+    top:              0;
+    left:             0;
+    width:            100%;
+    height:           100%;
+    z-index:          10;
+    background-color: rgba(0, 0, 0, 0.95);
+}
+
+.interior-modal-inicio {
+    color: #fff;
+}
+
+.interior-modal-inicio h2 {
+    font-size:     3rem;
+    text-align:    center;
+    margin-bottom: 1.5rem;
+    text-shadow:   0.2rem 0.2rem 0.1rem rgba(204, 204, 204, 1);
+}
+
+.interior-modal-inicio h3 {
+    font-size:     1.5rem;
+    text-align:    center;
+    margin-bottom: 1.5rem;
+}
+
+.interior-modal-inicio > ul {
+    margin:     1.5rem 4rem;
+    font-size:  1rem;
+    text-align: left;
+
+    & li {
+        line-height: 2.5rem;
+    }
+}
+
+.interior-modal-inicio button {
+    margin-top: 2.5rem;
+}
+
+/** MODAL DE VICTORIA **/
+.modal-victoria {
+    display:          none;
+    position:         fixed;
+    top:              50%;
+    left:             50%;
+    transform:        translate(-50%, -50%);
+    width:            max-content;
+    z-index:          11;
+    border:           0.3rem solid #fff;
+    background-color: #000;
+    padding:          1rem;
+    box-shadow:       0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
+}
+
+.fondo-modal-victoria {
+    display:          none;
+    position:         fixed;
+    top:              0;
+    left:             0;
+    width:            100%;
+    height:           100%;
+    z-index:          10;
+    background-color: rgba(0, 0, 0, 0.95);
+}
+
+.interior-modal-victoria {
+    color: #fff;
+}
+
+.interior-modal-victoria h2 {
+    font-size:     3rem;
+    text-align:    center;
+    margin-bottom: 1.5rem;
+    text-shadow:   0.2rem 0.2rem 0.1rem rgba(204, 204, 204, 1);
+}
+
+.interior-modal-victoria h3 {
+    font-size:     1.5rem;
+    text-align:    center;
+    margin-bottom: 1.5rem;
+}
+
+.interior-modal-victoria button {
+    margin-top: 2.5rem;
 }
 
 /* TOOLTIP MAESTRO*/
@@ -100,14 +202,18 @@ h1 {
 /** HOVERS DE LOS TOOLTIPS **/
 .dificultad:hover .tooltip-text,
 .marcador:hover .tooltip-text,
-.reiniciar:hover .tooltip-text {
+.reiniciar:hover .tooltip-text,
+.cerrar-inicio:hover .tooltip-text,
+.cerrar-victoria:hover .tooltip-text {
     visibility: visible;
 }
 
 /* POSITION DE LOS TOOLTIPS */
 .dificultad,
 .marcador,
-.reiniciar {
+.reiniciar,
+.cerrar-inicio,
+.cerrar-victoria {
     position: relative;
 }
 
