--- a/src/css/main.css
+++ b/src/css/main.css
@@ -97,7 +97,7 @@ body {
 /* Mirarlo bien */
 .carrusel {
     position: relative;
-    width: 210px;
+    width: max-content;
     padding: 0 1rem;
     float: left;
     box-sizing: border-box;
@@ -105,6 +105,8 @@ body {
 }
 
 .carrusel h4 {
+    left: 5px;
+    top: 167px;
     position: absolute;
     z-index: 1;
     font-size: 10px;
@@ -112,16 +114,11 @@ body {
     color: white;
     padding: 15px;
 }
-/* Mirar Font Size */
-.carrusel h4 small {
-    font-size: 10px;
-    display: block;
-}
 
 .carrusel a img {
     object-fit: cover;
     height: 200px;
-    width: 300px;
+    width: 250px;
     box-shadow: 0 2px 5px white;
     transition: .3s ease-in-out;
 }
