--- a/src/css/memory_cards.css
+++ b/src/css/memory_cards.css
@@ -200,6 +200,53 @@ h1 {
     margin-top: 2.5rem;
 }
 
+/** MODAL DE VICTORIA **/
+.modal-victoria {
+    display:          none;
+    position:         fixed;
+    top:              50%;
+    left:             50%;
+    transform:        translate(-50%, -50%);
+    width:            max-content;
+    z-index:          11;
+    border:           0.3rem solid #fff;
+    background-color: #000;
+    padding:          1rem;
+    box-shadow:       0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
+}
+
+.fondo-modal-victoria {
+    display:          none;
+    position:         fixed;
+    top:              0;
+    left:             0;
+    width:            100%;
+    height:           100%;
+    z-index:          10;
+    background-color: rgba(0, 0, 0, 0.95);
+}
+
+.interior-modal-victoria {
+    color: #fff;
+}
+
+.interior-modal-victoria h2 {
+    font-size:     3rem;
+    text-align:    center;
+    margin-bottom: 1.5rem;
+    text-shadow:   0.2rem 0.2rem 0.1rem rgba(204, 204, 204, 1);
+}
+
+.interior-modal-victoria h3 {
+    font-size:     1.5rem;
+    text-align:    center;
+    margin-bottom: 1.5rem;
+}
+
+.interior-modal-victoria button {
+    margin-top: 2.5rem;
+}
+
 /** OPCIONES DE COLORES **/
 .seleccion-colores {
     display:         flex;
